# test-repo-trial-bt

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  COMPLIANCE.md  Makefile  README.md  catalog-info.yaml  check-extensions.sh  example_data.csv  prevent-protected-file-changes.sh  pyproject.toml  run_etl.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/linters/: .markdown-link-check.json
.github/workflows/: ci.yml  mypy.yml  security-scan.yml
docs/: index.md
docs/adr/: 0001-package-manager.md  0002-linting-tools.md  0003-testing-framework.md  adr-template.md  index.md
test_repo_trial_bt/: __init__.py  extract.py  load.py  transform.py
tests/e2e/: test_etl_workflow.py
tests/unit/: test_extract.py  test_load.py  test_transform.py
